# comp-geom

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  CompGeom.cpp  TriangleExample.cpp  printer.gltf
src/examples/: DartExample.cpp  PrimitivesExample.cpp  ViewerExample.cpp
